--- a/Jobeet/app/Resources/views/job/index.html.twig
+++ b/Jobeet/app/Resources/views/job/index.html.twig
@@ -1,69 +1,24 @@
-{% extends 'base.html.twig' %}
+{% extends 'EnsJobeetBundle::layout.html.twig' %}
 
-{% block body %}
-    <h1>Jobs list</h1>
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('bundles/ensjobeet/css/jobs.css') }}" type="text/css" media="all"/>
+{% endblock %}
 
-    <table>
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Job_type</th>
-                <th>Company</th>
-                <th>Logo</th>
-                <th>Url</th>
-                <th>Position</th>
-                <th>Location</th>
-                <th>Description</th>
-                <th>How_to_apply</th>
-                <th>Token</th>
-                <th>Is_public</th>
-                <th>Is_activated</th>
-                <th>Email</th>
-                <th>Rating</th>
-                <th>Expires_at</th>
-                <th>Created_at</th>
-                <th>Updated_at</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for job in jobs %}
-            <tr>
-                <td><a href="{{ path('ens_job_show', { 'id': job.id }) }}">{{ job.id }}</a></td>
-                <td>{{ job.jobtype }}</td>
-                <td>{{ job.company }}</td>
-                <td>{{ job.logo }}</td>
-                <td>{{ job.url }}</td>
-                <td>{{ job.position }}</td>
-                <td>{{ job.location }}</td>
-                <td>{{ job.description }}</td>
-                <td>{{ job.howtoapply }}</td>
-                <td>{{ job.token }}</td>
-                <td>{% if job.ispublic %}Yes{% else %}No{% endif %}</td>
-                <td>{% if job.isactivated %}Yes{% else %}No{% endif %}</td>
-                <td>{{ job.email }}</td>
-                <td>{{ job.rating }}</td>
-                <td>{% if job.expiresat %}{{ job.expiresat|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>{% if job.createdat %}{{ job.createdat|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>{% if job.updatedat %}{{ job.updatedat|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>
-                    <ul>
-                        <li>
-                            <a href="{{ path('ens_job_show', { 'id': job.id }) }}">show</a>
-                        </li>
-                        <li>
-                            <a href="{{ path('ens_job_edit', { 'id': job.id }) }}">edit</a>
-                        </li>
-                    </ul>
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-    <ul>
-        <li>
-            <a href="{{ path('ens_job_new') }}">Create a new job</a>
-        </li>
-    </ul>
+{% block content %}
+    <div id="jobs">
+        <table class="jobs">
+            {% for job in jobs %}
+                <tr class="{{ cycle(['even', 'odd'], loop.index) }}">
+                    <td class="location">{{ job.location }}</td>
+                    <td class="position">
+                        <a href="{{ path('ens_job_show', { 'id': job.id }) }}">
+                            {{ job.position }}
+                        </a>
+                    </td>
+                    <td class="company">{{ job.company }}</td>
+                </tr>
+            {% endfor %}
+        </table>
+    </div>
 {% endblock %}
