--- a/Jobeet/app/Resources/views/job/new.html.twig
+++ b/Jobeet/app/Resources/views/job/new.html.twig
@@ -1,16 +1,18 @@
-{% extends 'base.html.twig' %}
+{% extends 'layout.html.twig' %}
 
-{% block body %}
-    <h1>Job creation</h1>
+{% block contetnt %}
+    {% block body %}
+        <h1>Job creation</h1>
 
-    {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <input type="submit" value="Create" />
-    {{ form_end(form) }}
+        {{ form_start(form) }}
+            {{ form_widget(form) }}
+            <input type="submit" value="Create" />
+        {{ form_end(form) }}
 
-    <ul>
-        <li>
-            <a href="{{ path('ens_job_index') }}">Back to the list</a>
-        </li>
-    </ul>
+        <ul>
+            <li>
+                <a href="{{ path('ens_job_index') }}">Back to the list</a>
+            </li>
+        </ul>
+    {% endblock %}
 {% endblock %}
